<resources>
    <string name="stations_icon_label">Offi Stations</string>
    <string name="directions_icon_label">Offi Directions</string>
    <string name="plans_icon_label">Offi Plans</string>
    <string name="disclaimer_network">data provided by\n%s</string>
    <string name="disclaimer_responsibility">errors and omissions excepted</string>
    <string name="disclaimer_responsibility_2line">errors and omis-\nsions excepted</string>
    <string name="navigation_drawer_message">I\'m developing Offi with love in my spare time. It\'s free to use and there are no ads. If you would like show your support, can you rate the app 5 stars and recommend it to your friends?</string>
    <string name="action_bar_navigator_description">Navigator</string>
    <string name="action_bar_back_description">Back</string>
    <string name="action_bar_progress_description">Refresh</string>
    <string name="action_bar_overflow_description">More</string>
    <string name="stations_activity_title">Nearby Stations</string>
    <string name="station_details_activity_title">Station Details</string>
    <string name="directions_activity_title">Directions</string>
    <string name="trip_details_title">Connection Details</string>
    <string name="plans_activity_title">Network Plans</string>
    <string name="network_picker_activity_title">Pick Transportation Network</string>
    <string name="global_options_stations_comment">Departure times and delays</string>
    <string name="global_options_directions_comment">From door to door</string>
    <string name="global_options_plans_comment">For a rough overview</string>
    <string name="global_options_donate_title">Donate</string>
    <string name="global_options_report_bug_title">Report bug</string>
    <string name="global_options_preferences_title">Settings</string>
    <string name="global_options_about_title">About Offi</string>
    <string name="global_preferences_title">Common</string>
    <string name="global_preferences_network_provider_title">Transport network</string>
    <string name="global_preferences_network_provider_summary">Pick transportation network.</string>
    <string name="global_preferences_show_changelog_title">Show changes</string>
    <string name="global_preferences_show_changelog_summary">Show Offi\'s changelog after each upgrade to a new version.</string>
    <string name="global_preferences_show_hints_title">Show hints</string>
    <string name="global_preferences_show_hints_summary">Show useful hints now and then.</string>
    <string name="global_preferences_location_settings_title">Location settings</string>
    <string name="global_preferences_location_settings_summary">Enable location providers, e.g. GPS.</string>
    <string name="global_preferences_show_trip_details_on_lockscreen_summary">Show the trip details activity on the lockscreen</string>
    <string name="global_preferences_show_trip_details_on_lockscreen_title">Trip details on lockscreen</string>
    <string name="global_preferences_show_station_details_on_lockscreen_summary">Show the station details activity on the lockscreen</string>
    <string name="global_preferences_show_station_details_on_lockscreen_title">Station details on lockscreen</string>
    <string name="global_preferences_show_plan_on_lockscreen_summary">Show the plan activity on the lockscreen</string>
    <string name="global_preferences_show_plan_on_lockscreen_title">Plan on lockscreen</string>
    <string name="global_preferences_battery_optimizations_title">Battery optimizations</string>
    <string name="global_preferences_battery_optimizations_summary">If the app-widget cannot fetch departure times while your device is in standby, you should disable battery optimizations for Öffi.</string>
    <string name="about_title">About Offi</string>
    <string name="about_copyright_title">Copyright</string>
    <string name="about_copyright_summary">© 2010-2019, the Öffi developers</string>
    <string name="about_license_title">License</string>
    <string name="about_source_title">Source code</string>
    <string name="about_changelog_title">View Changelog</string>
    <string name="about_changelog_summary">https://oeffi.schildbach.de/changelog.html</string>
    <string name="about_faq_title">FAQ</string>
    <string name="about_faq_summary">https://oeffi.schildbach.de/faq.html</string>
    <string name="about_participate_title">Participate</string>
    <string name="about_market_app_title">Rate or Review Offi</string>
    <string name="about_donate_title">Donations</string>
    <string name="about_donate_bitcoin_title">Donate Bitcoins</string>
    <string name="about_donate_bitcoin_summary">Bitcoin is an Internet currency.</string>
    <string name="about_donate_euro_title">Donate Euros</string>
    <string name="about_donate_euro_summary">https://oeffi.schildbach.de/donate.html</string>
    <string name="network_picker_firsttime_message">Because you are using Offi for the first time, you need to pick a region that suits you well. You
		can change this later.</string>
    <string name="network_picker_entry_usage">%.1f MB\ninstalled</string>
    <string name="network_picker_entry_license">License:\n%s</string>
    <string name="network_picker_entry_state_alpha">alpha</string>
    <string name="network_picker_entry_state_beta">beta</string>
    <string name="network_picker_entry_state_deprecated">deprecated</string>
    <string name="network_picker_separator_last">Last used</string>
    <string name="network_picker_separator_suggested">Suggested</string>
    <string name="network_picker_separator_nearby">Nearby</string>
    <string name="network_picker_separator_europe">Europe</string>
    <string name="network_picker_context_remove_title">Remove Data</string>
    <string name="toast_add_favorite">%s\nadded to favorites</string>
    <string name="stations_intentfilter_title">Nearby Stops or Stations</string>
    <string name="stations_list_entry_no_departures">(No departures)</string>
    <string name="stations_list_entry_product_filtered">(None of the departures match the product filter)</string>
    <string name="stations_list_entry_interval">(approx. %s min interval)</string>
    <string name="stations_list_acquiring_location">Acquiring location…</string>
    <string name="stations_list_cannot_acquire_location">Cannot acquire device location.</string>
    <string name="stations_list_cannot_acquire_location_hint">Try enabling at least one location provider.</string>
    <string name="stations_list_location_settings">Location settings</string>
    <string name="stations_list_querying_nearby">Searching nearby stations…</string>
    <string name="stations_list_matching">Matching…</string>
    <string name="stations_list_empty_nearby">No nearby stations.</string>
    <string name="stations_list_empty_nearby_hint">Consider selecting another transportation network.</string>
    <string name="stations_list_empty_query">No stations matched.</string>
    <string name="stations_list_empty_query_hint">Have you spelled it correctly? Try a more general query.</string>
    <string name="stations_list_network_settings">Switch network</string>
    <string name="stations_location_permission_missing">There is no permission to read the device\'s location.</string>
    <string name="stations_location_permission_request">Grant permission</string>
    <string name="stations_location_provider_disabled">disabled</string>
    <string name="stations_location_provider_enabled">enabled</string>
    <string name="stations_location_provider_acquiring">acquiring</string>
    <string name="stations_message_missing_capability">The selected transportation network does not serve departure times.\nConsider selecting another network.</string>
    <string name="stations_connectivity_warning">Offline mode: Your device is not connected.\nThus, departure times will not be shown.</string>
    <string name="stations_nearby_stations_error_title">Problem loading nearby stations data</string>
    <string name="stations_nearby_stations_error_message">Make sure your phone is connected to the Internet. Do you want to continue?</string>
    <string name="stations_nearby_stations_error_continue">Continue</string>
    <string name="stations_nearby_stations_error_exit">Exit</string>
    <string name="station_context_add_favorite_title">Add To Favorites</string>
    <string name="station_context_remove_favorite_title">Remove From Favorites</string>
    <string name="station_context_add_ignore_title">Ignore</string>
    <string name="station_context_remove_ignore_title">Make visible again</string>
    <string name="station_context_details_title">Show All Departures</string>
    <string name="station_context_map_title">Show on Map</string>
    <string name="station_context_directions_from_title">Connection From Here</string>
    <string name="station_context_directions_to_title">Connection To Here</string>
    <string name="station_context_launcher_shortcut_title">Create Launcher Shortcut</string>
    <string name="stations_options_favorites_title">Station Favorites</string>
    <string name="stations_filter_title">Product filter</string>
    <string name="stations_action_search_title">Search station</string>
    <string name="stations_searchable_hint">Search name or number</string>
    <string name="stations_search_list_empty">No stations found</string>
    <string name="stations_station_details_intentfilter_title">Departure times of this station</string>
    <string name="stations_station_details_action_favorite_title">Favorite</string>
    <string name="stations_station_details_progress">Loading departures…</string>
    <string name="stations_station_details_list_empty">No departures</string>
    <string name="stations_station_details_options_add_favorite_title">Add favorite</string>
    <string name="stations_station_details_options_remove_favorite_title">Remove favorite</string>
    <string name="stations_station_details_options_add_ignore_title">Ignore</string>
    <string name="stations_station_details_options_remove_ignore_title">Make visible</string>
    <string name="stations_decode_foreign_progress">Decoding touch&amp;travel code…</string>
    <string name="directions_query_history_context_show_trip">Show saved trip</string>
    <string name="directions_query_history_context_remove_trip">Forget saved trip</string>
    <string name="directions_query_history_context_remove_entry">Remove connection query</string>
    <string name="directions_query_history_context_add_favorite">Mark query as favorite</string>
    <string name="directions_query_history_context_remove_favorite">Remove favorite</string>
    <string name="directions_overview_from">Start:</string>
    <string name="directions_overview_via">Via:</string>
    <string name="directions_overview_to">End:</string>
    <string name="directions_preferences_title">Directions</string>
    <string name="directions_preferences_optimize_trip_title">Optimize</string>
    <string name="directions_preferences_optimize_trip_summary">What\'s most important to you? This does not affect all transport networks.</string>
    <string name="directions_preferences_walk_speed_title">Walk speed</string>
    <string name="directions_preferences_walk_speed_summary">How fast you can walk? This does not affect all transport networks.</string>
    <string name="directions_preferences_accessibility_title">Accessibility</string>
    <string name="directions_preferences_accessibility_summary">How accessible do you need the route to be? This does not affect all transport networks.</string>
    <string name="product_i">Highspeed</string>
    <string name="product_r">Regional</string>
    <string name="product_s">Suburban</string>
    <string name="product_u">Metro</string>
    <string name="product_t">Tram</string>
    <string name="product_b">Bus</string>
    <string name="product_p">On-Demand</string>
    <string name="product_f">Ferry</string>
    <string name="product_c">Cablecar</string>
</resources>