<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/global_preferences_title" >
        <Preference
            android:key="network_provider"
            android:summary="@string/global_preferences_network_provider_summary"
            android:title="@string/global_preferences_network_provider_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_changelog"
            android:summary="@string/global_preferences_show_changelog_summary"
            android:title="@string/global_preferences_show_changelog_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_hints"
            android:summary="@string/global_preferences_show_hints_summary"
            android:title="@string/global_preferences_show_hints_title" />

        <Preference
            android:key="location_settings"
            android:summary="@string/global_preferences_location_settings_summary"
            android:title="@string/global_preferences_location_settings_title" />
        <Preference
            android:key="battery_optimizations"
            android:summary="@string/global_preferences_battery_optimizations_summary"
            android:title="@string/global_preferences_battery_optimizations_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/directions_preferences_title" >
        <ListPreference
            android:entries="@array/directions_optimize_trip"
            android:entryValues="@array/directions_optimize_trip_values"
            android:key="optimize_trip"
            android:summary="@string/directions_preferences_optimize_trip_summary"
            android:title="@string/directions_preferences_optimize_trip_title" />
        <ListPreference
            android:defaultValue="NORMAL"
            android:entries="@array/directions_walk_speed"
            android:entryValues="@array/directions_walk_speed_values"
            android:key="walk_speed"
            android:summary="@string/directions_preferences_walk_speed_summary"
            android:title="@string/directions_preferences_walk_speed_title" />
        <ListPreference
            android:defaultValue="NEUTRAL"
            android:entries="@array/directions_accessibility"
            android:entryValues="@array/directions_accessibility_values"
            android:key="accessibility"
            android:summary="@string/directions_preferences_accessibility_summary"
            android:title="@string/directions_preferences_accessibility_title" />
    </PreferenceCategory>

</PreferenceScreen>
