<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
            android:key="about_version"
            android:title="Version"/>
    <Preference
            android:summary="@string/about_copyright_summary"
            android:title="@string/about_copyright_title"/>
    <Preference
            android:key="about_license"
            android:summary="https://www.gnu.org/licenses/gpl-3.0.txt"
            android:title="@string/about_license_title">
        <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.gnu.org/licenses/gpl-3.0.txt"/>
    </Preference>
    <Preference
            android:key="about_changelog"
            android:summary="@string/about_changelog_summary"
            android:title="@string/about_changelog_title"/>
    <Preference
            android:key="about_faq"
            android:summary="@string/about_faq_summary"
            android:title="@string/about_faq_title">
        <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/about_faq_summary"/>
    </Preference>

    <PreferenceCategory android:title="@string/about_participate_title">
        <Preference
                android:key="about_market_app"
                android:title="@string/about_market_app_title"/>
        <Preference
                android:key="about_source"
                android:summary="https://gitlab.com/oeffi/oeffi"
                android:title="@string/about_source_title">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://gitlab.com/oeffi/oeffi"/>
        </Preference>
        <Preference
                android:key="about_twitter"
                android:summary="\@oeffi"
                android:title="Twitter">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://twitter.com/oeffi"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
